@@ -3,4 +3,5 @@ GFXSRC  +=
 GFXDEFS +=
 GFXLIBS +=
 
-include $(GFXLIB)/drivers/gdisp/framebuffer/driver.mk
+include $(GFXLIB)/drivers/gdisp/alteraframereader/driver.mk
+include $(GFXLIB)/drivers/ginput/touch/FT5316/driver.mk
